angular4/anhLe/src/home/home.css
.c-container {
	min-height: 101vh;
	width:100%;
	position: relative;


}

#intro .responsive-bg{
	z-index: 0;
	background-image: linear-gradient(
			rgba(255,255,255, 0),
			rgba(255,255,255, 1)),
	url("../assets/images/lg/intro.png");
	position: absolute;

}

@media only screen and (max-width: 500px){
	.c-container {
		background-image: linear-gradient(
				rgba(255,255,255, 0),
				rgba(255,255,255, 1)),
		url("../assets/images/sm/intro.png");
		background-size: 100%;
	}

}

@media only screen and (max-width: 800px){
	.c-container {
		background-image: linear-gradient(
				rgba(255,255,255, 0),
				rgba(255,255,255, 1)),
		url("../assets/images/md/intro.png");
		background-size: 100%;
	}
}


.c-container #intro-content {
	width: inherit;
	height: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.center-div {
	width: inherit;
	height: inherit;
}


@media (min-width: 870px){
	.center-div {
		width: 60%;
	}
}


#intro-scroll-button {
	width: 100%;
	position: absolute;
	bottom: 3em;
	left: 0;
}

.flex-center-item .glyphicon-chevron-down, h6 span {
	-webkit-transition: all 300ms ease;
	-moz-transition: all 300ms ease;
	-ms-transition: all 300ms ease;
	-o-transition: all 300ms ease;
	transition: all 300ms ease;
	color: var(--intro-scroll-button-font);
	font-weight: 600;

}

.flex-center-item:hover h6 span:after {
	-webkit-transition: all 300ms ease;
	-moz-transition: all 300ms ease;
	-ms-transition: all 300ms ease;
	-o-transition: all 300ms ease;
	transition: all 300ms ease;

	content: 'SEE MORE';
}

.flex-center-item:hover .glyphicon-chevron-down {
	-webkit-transition: all 300ms ease;
	-moz-transition: all 300ms ease;
	-ms-transition: all 300ms ease;
	-o-transition: all 300ms ease;
	transition: all 300ms ease;

	font-size: 3em;
}
#intro-scroll-button a {
	color: var(--intro-scroll-button-font);
}

#about {
	background-color: white;
	color: var(--intro-scroll-button-font);
}

#about .network-icons i {
	color: var(--main-font);
}



/*----------------Experience----------------*/
@media (max-width: 800px ) {
	#expertise {
		padding-left: 0.7em;
		padding-right: 0.7em;
	}
}
#expertise {
	background-color: var(--expertise-bg);
	color: var(--expertise-main-font);
}

#expertise .row {
	margin: 5% auto;
}

#expertise .row > div {
	padding: 5px;
}

.flex-left {
	display: flex;
	align-items: center;
}

.flex-left i {
	font-size: 3em;
	margin: 10px 10px 10px 0;
}

.flex-left h3{
	margin: 10px 0;
	text-transform: uppercase;
	font-size: 1.5em;
	display: inline-block;
}

@media only screen and (max-device-width: 700px){
	.flex-left i {
		font-size: 1.5em;
	}
	.flex-left h3 {
		font-size: 1em;
	}
}

.expertise-card {
	background-color: var(--expertise-card-bg);
	padding: 2em;
	margin: 5px;
	color: var(--expertise-main-font);


}

.polaroid {
	box-shadow: 0 0 6px 0 rgba(30,45,62,.09);
	transition: box-shadow .2s;
	-webkit-transition: all 400ms ease;
	-moz-transition: all 400ms ease;
	-ms-transition: all 400ms ease;
	-o-transition: all 400ms ease;
	transition: all 400ms ease;
}

.polaroid:hover {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	-webkit-transition: all 400ms ease;
	-moz-transition: all 400ms ease;
	-ms-transition: all 400ms ease;
	-o-transition: all 400ms ease;
	transition: all 400ms ease;
}



/*----------------Skill----------------*/
#skills {
	width: 100%;
	height: auto;
}

#skills .container-fluid{
	padding: 5% 2%;

}

#skills {
	background-image: linear-gradient(
			rgba(20,20,20, .5),
			rgba(20,20,20, .5)),
	url("../assets/images/lg/skills.png");
	background-position: center center;
	background-repeat: no-repeat;
	-webkit-background-size: cover;
	background-attachment: fixed;

}


#skills div h4 {
	display: inline-block;
}

#skills .row {
	margin-top: 10%;
}

#skills ul {
	list-style: none;
	padding: 0;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}

.skills-item {
	position: relative;
	display: inline-flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	border: 2px solid white;
	border-radius: 50%;
	padding: 0;
	margin: 1%;
	width: 6em;
	height: 6em;
	background-color: rgba(20,20,20, .7);
}

.skills-item h6 {
	font-size: 0.8em;
	line-height: 1.25em;
	text-align: center;
}

.view-resume {
	margin: 10% auto;
}
.view-resume .my-btn-outline {
	background-color: rgba(20,20,20, .7);
	color: white;
}

.view-resume .my-btn-outline:hover{
	color: var(--yellow);
	text-decoration: none;
	background-color: white;
}



/*----------------Timeline----------------*/
#timeline {
	padding-bottom: 15%;
	background-color: var(--timeline-bg);
}

#timeline .title {
	color: var(--timeline-font);
}


.timeline {
	margin-top: 10%;
	list-style: none;
	padding: 20px 0 20px;
	position: relative;
	margin-bottom: 0;
}

.timeline:before {
	top: 0;
	bottom: 0;
	position: absolute;
	content: " ";
	width: 3px;
	background-color: var(--timeline-inactive);
	left: 50%;
	margin-left: -1.5px;
}

.timeline li {
	margin-bottom: 20px;
	position: relative;
}

.timeline li:before,
.timeline li:after {
	content: " ";
	display: table;
}

.timeline li:after {
	clear: both;
}

.timeline li:before,
.timeline li:after {
	content: " ";
	display: table;
}

.timeline li:after {
	clear: both;
}

.timeline li .timeline-panel {
	width: 44%;
	float: left;
	border-radius: 2px;
	padding: 20px;
	position: relative;
	-webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
	background-color: var(--timeline-card-bg);

	-webkit-transition: all 400ms ease;
	-moz-transition: all 400ms ease;
	-ms-transition: all 400ms ease;
	-o-transition: all 400ms ease;
	transition: all 400ms ease;
}


.timeline li .timeline-panel:before {
	position: absolute;
	top: 26px;
	right: -15px;
	display: inline-block;
	border-top: 15px solid transparent;
	border-left: 15px solid var(--timeline-card-bg);
	border-right: 0 solid var(--timeline-card-bg);
	border-bottom: 15px solid transparent;
	content: " ";
}

.timeline li .timeline-panel:after {
	position: absolute;
	top: 27px;
	right: -14px;
	display: inline-block;
	border-top: 14px solid transparent;
	border-left: 14px solid var(--timeline-card-bg);
	border-right: 0 solid var(--timeline-card-bg);
	border-bottom: 14px solid transparent;
	content: " ";
}

.timeline li .timeline-panel:hover {
	box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 25px 0 rgba(0, 0, 0, 0.19);
	-webkit-transition: all 400ms ease;
	-moz-transition: all 400ms ease;
	-ms-transition: all 400ms ease;
	-o-transition: all 400ms ease;
	transition: all 400ms ease;
}

.timeline li .timeline-badge {
	width: 50px;
	height: 50px;
	padding: 10px;
	text-align: center;
	position: absolute;
	top: 16px;
	left: 50%;
	margin-left: -25px;
	z-index: 100;
	border-radius: 100%;
	border: 2px solid var(--timeline-inactive);
}

.timeline-badge-inner {
	background-color: var(--timeline-inactive);
	border-radius: 50%;
	width: 100%;
	height: 100%;

}

.timeline li.timeline-inverted .timeline-panel {
	float: right;
}

.timeline li.timeline-inverted .timeline-panel:before {
	border-left-width: 0;
	border-right-width: 15px;
	left: -15px;
	right: auto;
}

.timeline li.timeline-inverted .timeline-panel:after {
	border-left-width: 0;
	border-right-width: 14px;
	left: -14px;
	right: auto;
}


.timeline-title {
	margin-top: 0;
	margin-bottom: 0;
	color: inherit;
}

.timeline-panel h4 {
	margin-top: 0;
	color: var(--timeline-card-font);
	font-size: 1.2em;
}

.timeline-panel .text-muted{
	color: var(--timeline-inactive) !important;
}

.timeline-body p,
.timeline-body ul {
	margin-bottom: 0;
}

@media (max-width: 767px) {
	ul.timeline:before {
		left: 40px;
	}

	ul.timeline li .timeline-panel {
		width: calc(100% - 90px);
		width: -moz-calc(100% - 90px);
		width: -webkit-calc(100% - 90px);
	}

	ul.timeline li .timeline-badge {
		left: 15px;
		margin-left: 0;
		top: 16px;
	}

	ul.timeline li .timeline-panel {
		float: right;
	}

	ul.timeline li .timeline-panel:before {
		border-left-width: 0;
		border-right-width: 15px;
		left: -15px;
		right: auto;
	}

	ul.timeline li .timeline-panel:after {
		border-left-width: 0;
		border-right-width: 14px;
		left: -14px;
		right: auto;
	}
}

#timeline .down-arrow {
	display: block;
	margin: 0 auto;
	border-color: transparent;
	border-top-color: var(--timeline-inactive);
	border-style: solid;
	border-width: 15px 7px 0;
	width: 0;
	height: 0;
	position: relative;
	line-height: 0;
}


/*-------------projects------------------*/
#projects {
	width: 100%;
	height: auto;
}

/*
#projects {
	background-image: linear-gradient(
			rgba(20,20,20, .5),
			rgba(20,20,20, .5)),
	url("../assets/images/lg/projects.png");
	background-position: center center;
	background-repeat: no-repeat;
	-webkit-background-size: cover;
	background-attachment: fixed;
}


@media only screen and (max-width: 800px) {
	#projects .responsive-bg{
		background-image: linear-gradient(
				rgba(20, 20, 20, 0.7),
				rgba(20, 20, 20, 0.7)),
		url("../assets/images/md/projects.png");
	}
}
*/


.view-work {
	margin-top: 2em;
}

.project-list {
	margin-top: 15%;
	margin-bottom: 10%;
}

.view-work .my-btn-outline:hover {
	color: var(--yellow);
}

